# dart-rust-interop

./: .gitignore  Makefile  README.md  pubspec.yaml
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/include/: trampoline.c
