[package]
name = "rust_ffi"
version = "0.0.1"
edition = "2018"
build = "build.rs"

[lib]
name = "rust_ffi"
crate-type = ["cdylib"]

[dependencies]
dart-sys = "2.0"
extern_executor = { version = "0.1.2", features = ["dart"]}
futures = "0.3"
futures-timer = "3.0"
libc = "0.2"

[build-dependencies]
cc = "1.0"